// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App has a valid snapshot 1`] = `
<div
  className="page"
>
  <div
    className="interactions"
  >
    <form
      onSubmit={[Function]}
    >
       
      Type to Search
       
      <input
        onChange={[Function]}
        onSubmit={[Function]}
        type="text"
        value="redux"
      />
       
      <button>
         Submit
      </button>
    </form>
  </div>
  <div
    className="table"
  />
  <div
    className="interactions"
  >
    <button
      onClick={[Function]}
    >
      More..
    </button>
  </div>
</div>
`;

exports[`App has a valid snapshot 2`] = `
<div
  className="page"
>
  <div
    className="interactions"
  >
    <form
      onSubmit={[Function]}
    >
       
      Type to Search
       
      <input
        onChange={[Function]}
        onSubmit={[Function]}
        type="text"
        value="redux"
      />
       
      <button>
         Submit
      </button>
    </form>
  </div>
  <div
    className="table"
  />
  <div
    className="interactions"
  >
    <button
      onClick={[Function]}
    >
      More..
    </button>
  </div>
</div>
`;

exports[`B has a valid snapshot 1`] = `
<form>
   
  Type to Search
   
  <input
    onSubmit={[Function]}
    type="text"
  />
   
  <button>
     Submit
  </button>
</form>
`;

exports[`BookList has a valid snapshot 1`] = `
<div
  className="table"
>
  <div
    className="table-row"
  >
    <span
      style={
        Object {
          "width": "40%",
        }
      }
    >
      <a>
        1
      </a>
    </span>
    <span
      style={
        Object {
          "width": "30%",
        }
      }
    >
      1
    </span>
    <span
      style={
        Object {
          "width": "10%",
        }
      }
    />
    <span>
      <button
        onClick={[Function]}
      >
        Dismiss
      </button>
    </span>
  </div>
  <div
    className="table-row"
  >
    <span
      style={
        Object {
          "width": "40%",
        }
      }
    >
      <a>
        2
      </a>
    </span>
    <span
      style={
        Object {
          "width": "30%",
        }
      }
    >
      2
    </span>
    <span
      style={
        Object {
          "width": "10%",
        }
      }
    />
    <span>
      <button
        onClick={[Function]}
      >
        Dismiss
      </button>
    </span>
  </div>
</div>
`;

exports[`Button has a valid snapshot 1`] = `
<form>
   
  Type to Search
   
  <input
    onSubmit={[Function]}
    type="text"
  />
   
  <button>
     Submit
  </button>
</form>
`;

exports[`S has a valid snapshot 1`] = `
<div
  className="page"
>
  <div
    className="interactions"
  >
    <form
      onSubmit={[Function]}
    >
       
      Type to Search
       
      <input
        onChange={[Function]}
        onSubmit={[Function]}
        type="text"
        value="redux"
      />
       
      <button>
         Submit
      </button>
    </form>
  </div>
  <div
    className="table"
  />
  <div
    className="interactions"
  >
    <button
      onClick={[Function]}
    >
      More..
    </button>
  </div>
</div>
`;

exports[`Search has a valid snapshot 1`] = `
<div
  className="page"
>
  <div
    className="interactions"
  >
    <form
      onSubmit={[Function]}
    >
       
      Type to Search
       
      <input
        onChange={[Function]}
        onSubmit={[Function]}
        type="text"
        value="redux"
      />
       
      <button>
         Submit
      </button>
    </form>
  </div>
  <div
    className="table"
  />
  <div
    className="interactions"
  >
    <button
      onClick={[Function]}
    >
      More..
    </button>
  </div>
</div>
`;

exports[`Search has a valid snapshot 2`] = `
<form>
   
   Search
   
  <input
    onSubmit={[Function]}
    type="text"
  />
   
  <button>
     Submit
  </button>
</form>
`;

exports[`has a valid snapshot 1`] = `
<form>
   
  Type to Search
   
  <input
    onSubmit={[Function]}
    type="text"
  />
   
  <button>
     Submit
  </button>
</form>
`;
